--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ build/
 # Add this line if you're using Swift Package Manager in your project
 # .swiftpm/
 # Add this line if you're using Swift Package Manager in your project
+Package.resolved
