--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,19 +18,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Install dependencies
-        run: brew install ldid
-
-      - name: Change version to tag
-        run: sed -e '/MARKETING_VERSION = .*/s/= .*/= ${{ github.ref_name }}/' -i '' Build.xcconfig
-
-      - name: Get version
-        id: version
-        run: echo "version=$(grep MARKETING_VERSION Build.xcconfig | sed -e "s/MARKETING_VERSION = //g")" >> $GITHUB_OUTPUT
-
-      - name: Echo version
-        run: echo "${{ steps.version.outputs.version }}"
-
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1.4.1
         with:
@@ -64,18 +51,17 @@ jobs:
           files: SideStore.ipa
           body: |
 
-
       - name: Add version to IPA file name
         run: mv SideStore.ipa SideStore-${{ steps.version.outputs.version }}.ipa
 
       - name: Upload Stossycord.ipa Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
-          name: Stossycord-${{ steps.version.outputs.version }}.ipa
-          path: Stossycord-${{ steps.version.outputs.version }}.ipa
+          name: Stossycord.ipa
+          path: Stossycord.ipa
 
       - name: Upload *.dSYM Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
-          name: Stossycord-${{ steps.version.outputs.version }}-dSYM
+          name: Stossycord-dSYM
           path: ./*.dSYM/
