--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,12 @@ jobs:
           submodules: recursive
 
       - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1.4.1
+        uses: maxim-lobanov/setup-xcode@v1.4.2
         with:
           xcode-version: ${{ matrix.version }}
+
+      - name: Verify Swift version
+        run: swift --version
 
       - name: Build Stossycord
         run: make build | xcpretty && exit ${PIPESTATUS[0]}
