--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: 'macos-12'
+          - os: 'macos-13'
             version: '14.2'
 
     runs-on: ${{ matrix.os }}
@@ -22,6 +22,9 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1.4.1
         with:
           xcode-version: ${{ matrix.version }}
+
+      - name: Verify Xcode version
+        run: xcodebuild -version
 
       - name: Verify Swift version
         run: swift --version
