--- a/Stossycord/Info.plist
+++ b/Stossycord/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>This will show your currently playing Music as your presence.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
