--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Xcode
-        uses: maxim-lobanov/setup-xcode@v3
+        uses: maxim-lobanov/setup-xcode@vq
         with:
           xcode-version: latest-stable
 
