--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -21,17 +21,22 @@ jobs:
 
       - name: Build unsigned .app
         run: |
+          xcodebuild -resolvePackageDependencies -project Stossycord.xcodeproj -scheme Stossycord
+          
           xcodebuild \
             -project Stossycord.xcodeproj \
             -scheme Stossycord \
             -configuration Release \
             -destination 'generic/platform=iOS' \
+            -derivedDataPath DerivedData \
+            COMPILER_INDEX_STORE_ENABLE=NO \
+            SWIFT_USE_EXPLICIT_MODULE_BUILD=NO \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO \
-            clean build \
-            BUILD_DIR=build
-
+            clean build
+            
+            
       - name: Create unsigned .ipa
         run: |
           mkdir -p output
